src/lpc/parser/LPCParser.js
// Generated from LPC.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import LPCListener from './LPCListener.js';
import LPCVisitor from './LPCVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class LPCParser extends antlr4.Parser {

    static grammarFileName = "LPC.g4";
    static literalNames = [ null, "';'", "'('", "')'", "'+'", "'-'", "'*'", 
                            "'/'", "'%'", "'&'", "'^'", "'|'", "'~'", "'<'", 
                            "'>'", "'>='", "'<='", "'<<'", "'>>'", "'++'", 
                            "'--'", "'['", "']'", "'='", "'..'", "','", 
                            "'...'", "'{'", "'}'", "':'", "'->'", "'<-'", 
                            "'!'", "'=='", "'!='", "'&&'", "'||'", "'?'", 
                            "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                            "'^='", "'|='", "'<<='", "'>>='", "'::'", null, 
                            null, null, null, null, null, null, "'inherit'", 
                            "'private'", "'static'", "'atomic'", "'nomask'", 
                            "'varargs'", "'operator'", "'void'", "'int'", 
                            "'float'", "'string'", "'object'", "'mapping'", 
                            "'mixed'", "'if'", "'else'", "'switch'", "'case'", 
                            "'default'", "'while'", "'do'", "'for'", "'break'", 
                            "'continue'", "'return'", "'new'", "'try'", 
                            "'catch'", "'rlimits'", "'goto'", "'nil'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "INCLUDE", "DEFINE", "IFDEF", "IFNDEF", 
                             "ELSEDIR", "ENDIF", "UNDEF", "INHERIT", "PRIVATE", 
                             "STATIC", "ATOMIC", "NOMASK", "VARARGS", "OPERATOR", 
                             "VOID", "INT", "FLOAT", "STRING", "OBJECT", 
                             "MAPPING", "MIXED", "IF", "ELSE", "SWITCH", 
                             "CASE", "DEFAULT", "WHILE", "DO", "FOR", "BREAK", 
                             "CONTINUE", "RETURN", "NEW", "TRY", "CATCH", 
                             "RLIMITS", "GOTO", "NIL", "INTEGER", "IDENTIFIER", 
                             "FLOAT_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
                             "WS", "COMMENT", "LINE_COMMENT" ];
    static ruleNames = [ "program", "programElement", "preprocessorDirective", 
                         "includeDirective", "defineDirective", "ifdefDirective", 
                         "ifndefDirective", "elseDirective", "endifDirective", 
                         "undefDirective", "inheritDeclaration", "declaration", 
                         "functionDeclaration", "functionDeclarator", "operatorName", 
                         "formalParameters", "parameterList", "parameterDeclaration", 
                         "variableDeclaration", "variableDeclarators", "typeSpecifier", 
                         "arraySpecifier", "modifiers", "modifier", "block", 
                         "statement", "selectionStatement", "switchSection", 
                         "switchLabel", "iterationStatement", "forControl", 
                         "tryStatement", "catchStatement", "catchStandAloneStatement", 
                         "rlimitsStatement", "labeledStatement", "expressionStatement", 
                         "jumpStatement", "expression", "primary", "literal", 
                         "stringExpression", "expressionList", "mappingList", 
                         "mappingEntry" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LPCParser.ruleNames;
        this.literalNames = LPCParser.literalNames;
        this.symbolicNames = LPCParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 38:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 41:
    	    		return this.stringExpression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 13);
    		case 1:
    			return this.precpred(this._ctx, 12);
    		case 2:
    			return this.precpred(this._ctx, 11);
    		case 3:
    			return this.precpred(this._ctx, 10);
    		case 4:
    			return this.precpred(this._ctx, 9);
    		case 5:
    			return this.precpred(this._ctx, 8);
    		case 6:
    			return this.precpred(this._ctx, 7);
    		case 7:
    			return this.precpred(this._ctx, 6);
    		case 8:
    			return this.precpred(this._ctx, 5);
    		case 9:
    			return this.precpred(this._ctx, 4);
    		case 10:
    			return this.precpred(this._ctx, 3);
    		case 11:
    			return this.precpred(this._ctx, 2);
    		case 12:
    			return this.precpred(this._ctx, 23);
    		case 13:
    			return this.precpred(this._ctx, 22);
    		case 14:
    			return this.precpred(this._ctx, 21);
    		case 15:
    			return this.precpred(this._ctx, 18);
    		case 16:
    			return this.precpred(this._ctx, 17);
    		case 17:
    			return this.precpred(this._ctx, 15);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    stringExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 18:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LPCParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 135794742) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 3221159937) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 268435327) !== 0)) {
	            this.state = 92;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 49:
	            case 50:
	            case 51:
	            case 52:
	            case 53:
	            case 54:
	            case 55:
	                this.state = 90;
	                this.preprocessorDirective();
	                break;
	            case 1:
	            case 2:
	            case 4:
	            case 5:
	            case 12:
	            case 19:
	            case 20:
	            case 27:
	            case 32:
	            case 48:
	            case 56:
	            case 57:
	            case 58:
	            case 59:
	            case 60:
	            case 61:
	            case 63:
	            case 64:
	            case 65:
	            case 66:
	            case 67:
	            case 68:
	            case 69:
	            case 70:
	            case 72:
	            case 73:
	            case 74:
	            case 75:
	            case 76:
	            case 77:
	            case 78:
	            case 79:
	            case 80:
	            case 81:
	            case 82:
	            case 83:
	            case 84:
	            case 85:
	            case 86:
	            case 87:
	            case 88:
	            case 89:
	            case 90:
	            case 91:
	                this.state = 91;
	                this.programElement();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 96;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 97;
	        this.match(LPCParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	programElement() {
	    let localctx = new ProgramElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LPCParser.RULE_programElement);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 99;
	            this.variableDeclaration();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 100;
	            this.functionDeclaration();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 101;
	            this.inheritDeclaration();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 102;
	            this.statement();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	preprocessorDirective() {
	    let localctx = new PreprocessorDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LPCParser.RULE_preprocessorDirective);
	    try {
	        this.state = 112;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 49:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 105;
	            this.includeDirective();
	            break;
	        case 50:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 106;
	            this.defineDirective();
	            break;
	        case 51:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 107;
	            this.ifdefDirective();
	            break;
	        case 52:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 108;
	            this.ifndefDirective();
	            break;
	        case 53:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 109;
	            this.elseDirective();
	            break;
	        case 54:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 110;
	            this.endifDirective();
	            break;
	        case 55:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 111;
	            this.undefDirective();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	includeDirective() {
	    let localctx = new IncludeDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LPCParser.RULE_includeDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(LPCParser.INCLUDE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	defineDirective() {
	    let localctx = new DefineDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LPCParser.RULE_defineDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(LPCParser.DEFINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifdefDirective() {
	    let localctx = new IfdefDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LPCParser.RULE_ifdefDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(LPCParser.IFDEF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifndefDirective() {
	    let localctx = new IfndefDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LPCParser.RULE_ifndefDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(LPCParser.IFNDEF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseDirective() {
	    let localctx = new ElseDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LPCParser.RULE_elseDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(LPCParser.ELSEDIR);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	endifDirective() {
	    let localctx = new EndifDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LPCParser.RULE_endifDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.match(LPCParser.ENDIF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	undefDirective() {
	    let localctx = new UndefDirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, LPCParser.RULE_undefDirective);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.match(LPCParser.UNDEF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	inheritDeclaration() {
	    let localctx = new InheritDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, LPCParser.RULE_inheritDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===57) {
	            this.state = 128;
	            this.match(LPCParser.PRIVATE);
	        }

	        this.state = 131;
	        this.match(LPCParser.INHERIT);
	        this.state = 133;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===88) {
	            this.state = 132;
	            this.match(LPCParser.IDENTIFIER);
	        }

	        this.state = 135;
	        this.stringExpression(0);
	        this.state = 136;
	        this.match(LPCParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, LPCParser.RULE_declaration);
	    try {
	        this.state = 141;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 138;
	            this.functionDeclaration();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 139;
	            this.inheritDeclaration();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 140;
	            this.variableDeclaration();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDeclaration() {
	    let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, LPCParser.RULE_functionDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 57)) & ~0x1f) === 0 && ((1 << (_la - 57)) & 31) !== 0)) {
	            this.state = 143;
	            this.modifiers();
	        }

	        this.state = 146;
	        this.typeSpecifier();
	        this.state = 147;
	        this.functionDeclarator();
	        this.state = 148;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDeclarator() {
	    let localctx = new FunctionDeclaratorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, LPCParser.RULE_functionDeclarator);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 88:
	            this.state = 150;
	            this.match(LPCParser.IDENTIFIER);
	            break;
	        case 62:
	            this.state = 151;
	            this.operatorName();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 154;
	        this.match(LPCParser.T__1);
	        this.state = 156;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 61)) & ~0x1f) === 0 && ((1 << (_la - 61)) & 509) !== 0)) {
	            this.state = 155;
	            this.formalParameters();
	        }

	        this.state = 158;
	        this.match(LPCParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operatorName() {
	    let localctx = new OperatorNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, LPCParser.RULE_operatorName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.match(LPCParser.OPERATOR);
	        this.state = 186;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 161;
	            this.match(LPCParser.T__3);
	            break;

	        case 2:
	            this.state = 162;
	            this.match(LPCParser.T__4);
	            break;

	        case 3:
	            this.state = 163;
	            this.match(LPCParser.T__5);
	            break;

	        case 4:
	            this.state = 164;
	            this.match(LPCParser.T__6);
	            break;

	        case 5:
	            this.state = 165;
	            this.match(LPCParser.T__7);
	            break;

	        case 6:
	            this.state = 166;
	            this.match(LPCParser.T__8);
	            break;

	        case 7:
	            this.state = 167;
	            this.match(LPCParser.T__9);
	            break;

	        case 8:
	            this.state = 168;
	            this.match(LPCParser.T__10);
	            break;

	        case 9:
	            this.state = 169;
	            this.match(LPCParser.T__11);
	            break;

	        case 10:
	            this.state = 170;
	            this.match(LPCParser.T__12);
	            break;

	        case 11:
	            this.state = 171;
	            this.match(LPCParser.T__13);
	            break;

	        case 12:
	            this.state = 172;
	            this.match(LPCParser.T__14);
	            break;

	        case 13:
	            this.state = 173;
	            this.match(LPCParser.T__15);
	            break;

	        case 14:
	            this.state = 174;
	            this.match(LPCParser.T__16);
	            break;

	        case 15:
	            this.state = 175;
	            this.match(LPCParser.T__17);
	            break;

	        case 16:
	            this.state = 176;
	            this.match(LPCParser.T__18);
	            break;

	        case 17:
	            this.state = 177;
	            this.match(LPCParser.T__19);
	            break;

	        case 18:
	            this.state = 178;
	            this.match(LPCParser.T__20);
	            this.state = 179;
	            this.match(LPCParser.T__21);
	            break;

	        case 19:
	            this.state = 180;
	            this.match(LPCParser.T__20);
	            this.state = 181;
	            this.match(LPCParser.T__21);
	            this.state = 182;
	            this.match(LPCParser.T__22);
	            break;

	        case 20:
	            this.state = 183;
	            this.match(LPCParser.T__20);
	            this.state = 184;
	            this.match(LPCParser.T__23);
	            this.state = 185;
	            this.match(LPCParser.T__21);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	formalParameters() {
	    let localctx = new FormalParametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, LPCParser.RULE_formalParameters);
	    var _la = 0;
	    try {
	        this.state = 194;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 188;
	            this.match(LPCParser.VOID);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 189;
	            this.parameterList();
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===25) {
	                this.state = 190;
	                this.match(LPCParser.T__24);
	                this.state = 191;
	                this.match(LPCParser.T__25);
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameterList() {
	    let localctx = new ParameterListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, LPCParser.RULE_parameterList);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 196;
	        this.parameterDeclaration();
	        this.state = 201;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 197;
	                this.match(LPCParser.T__24);
	                this.state = 198;
	                this.parameterDeclaration(); 
	            }
	            this.state = 203;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameterDeclaration() {
	    let localctx = new ParameterDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, LPCParser.RULE_parameterDeclaration);
	    var _la = 0;
	    try {
	        this.state = 218;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 205;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===61) {
	                this.state = 204;
	                this.match(LPCParser.VARARGS);
	            }
